# FireGuard-Monolit

./: Dockerfile  README.md  docker-commands.txt  docker-compose.yml  pyproject.toml
.github/workflows/: CD-pipeline.yml  CI-pipeline.yml  api-branch.yml  deploy_to_VM.yml  python-app.yml
kubernetes_files/: deployment.yaml  mongo-express-deployment.yaml  mongo-express-service.yaml  mongodb-deployment.yaml  mongodb-service.yaml
src/: logikk.py  main.py
src/API/: api.py  main.py
src/API/routes/: get_fr.py
src/FRC_service/: calculate.py  preprocess.py
src/frcm/: frcapi.py
src/frcm/API/: api.py  main.py  pyproject.toml
src/frcm/API/bearer_token/: route.py
src/frcm/API/routes/: delta.py  fr_after_start_date.py  fr_before_end_date.py  fr_previous_days.py  fr_specific_period.py  fr_upcoming_days.py  get_fr.py  period.py  timedelta.py
src/frcm/FRC_service/: calculate.py  compute.py  dockerfile  preprocess.py  pyproject.toml  utils.py
src/frcm/data_harvesting/: client.py  client_met.py  extractor_met.py
src/frcm/logic/: bus_logic.py
tests/FRC_service/: test_compute.py  test_fireriskmodel_utils.py
tests/data_harvesting/: test_client_met.py  test_extractor_met.py
tests/datamodel/: test_datamodel.py  test_datamodel_utils.py  test_weatherdata_utils.py
tests/logic/: test_frcapi.py
