[tool.poetry]
name = "fireguard"
version = "0.1.0"
description = ""
authors = ["Håkon, Viktor, Andreas and Maksim"]
readme = "README.md"
packages = [
    {include = "FRC_service", from = "src"},{include = "API", from = "src"},
    {include = "logic", from = "src"},{include = "data_harvesting", from = "src"},
    {include = "datamodel", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.15"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
