[tool.poetry]
name = "frcm-service"
version = "0.1.0"
description = "microservice frcm fireguard"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.6.1"
python-dateutil = "^2.8.2"
numpy = "^1.26.3"
python-decouple = "^3.8"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
